--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
     />
-    <title>Folio</title>
+    <title>MyFolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
